# Python_AI_Learning

./: .gitignore  git-facilitate.xlsm
AI_Links_Hub/: index.html  (+1 more)
Self-Training-Roadmap/L0_Fundamentals/L0-S3_NumPy-Heap/: .gitignore  .pre-commit-config.yaml  README.md  git-facilitate.xlsm  pyproject.toml
Self-Training-Roadmap/L0_Fundamentals/L0-S3_NumPy-Heap/Notebooks_Persian/: ChatGPT_2025-08-07_L0_oldver_Numpy-Pandas-reshape-stats.ipynb  ChatGPT_2025-08-07_L0_oldver_Numpy.ipynb  ChatGPT_2025-08-08_L0_oldver_Numpy-Pandas-Filtering-Selection.ipynb  ChatGPT_2025-08-30_L0-S3_numpy_05_[ex11-15].ipynb  ChatGPT_2025-09-02_L0-S3_heap-queue.ipynb
Self-Training-Roadmap/L0_Fundamentals/L0-S3_NumPy-Heap/notebooks/: ChatGPT_2025-08-07_L0-1_numpy0.ipynb  ChatGPT_2025-08-29_L0_3_numpy_02.ipynb  ChatGPT_2025-08-29_L0_3_numpy_03.ipynb  ChatGPT_2025-08-29_L0_3_numpy_04.ipynb  ChatGPT_2025-08-31_L0_3_numpy_06_[ex16-20].ipynb  ChatGPT_2025-09-17_L0_S4_B1_FastAPI_HTTP.ipynb  L0_S1_Python_Basics.ipynb
Self-Training-Roadmap/L0_Fundamentals/L0-S3_NumPy-Heap/src/l0_s3_1/: __init__.py  arrays.py  cli.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex21.py
Self-Training-Roadmap/L0_Fundamentals/L0-S3_NumPy-Heap/tests/: test_arrays.py  test_ex01.py  test_ex02.py  test_ex03.py  test_ex04.py  test_ex05.py  test_ex06.py  test_ex07.py  test_ex08.py  test_ex09.py  test_ex10.py  test_ex11.py  test_ex12.py  test_ex13.py  test_ex14.py  test_ex15.py  test_ex16.py  test_ex17.py  test_ex21.py
(+83 files in other folders)
